# 2012-4-13

- Added new applets provided by Dave

# 2012-4-12

- updated patient data files
- finish showing all data on the summary view after the summary view refactor

The following changes lay the foundation for the tools menu but customizations to applet visibility and sort order are available only at compile time.

- list of applets is now stored per-patient
- different patients can show different applets
- applets can be ordered per patient

# 2012-4-11

- Setup api to pass in tap events to applet tiles
- Moved vital views to be an applet
- Moved medications to be an applet
- Added mockup of TBI tracker tile
- TBI Tracker tap pushes full screen view onto the stack
- Fixed enterprise profile issue
- Applets are now loaded dynamically from a plist file
- Applet API automatically sets patient and user info dictionary for user defined values
- Added immunizations applet
- Added vitals applet
- Added medications applet
- Added recent encounters applet

# 2012-4-10

- Started implementation of applet loading

# 2012-4-09

- Change red color in the app
- Creating custom grid table view to be used for display infinite number of doctors and applets on the summary view.
- Added custom set horizontal and vertical padding to the custom grid table view.

# 2012-4-07

- Removed #'s after patient names and replaced with *
- Changed display name back to hReader
- Changed bundle identifier back to org.mitre.HReader (this will install as a fresh app)
- Minor version bump to 0.3

# 2012-4-06

- Filling in missing synthetic data
- Set all red color to hReader red
- Vitals in the timeline now also show the values
- Moved tools and about to toolbar
- Changed tools button from 'action' to 'add' icon per Jeff's request
- Added synthetic data disclaimer to about

# 2012-4-03

- Fixed issue with vitals popover staying on the screen after the app goes to background
- Fixed issue with tools popover staying on screen when selecting about or navigation segmented control