@@ -98,6 +98,7 @@
     }
     
     // allergies
+    /*
     {
         NSArray *allergies = patient.allergies;
         NSUInteger count = [allergies count];
@@ -108,6 +109,27 @@
                 [string appendFormat:@", %lu more", (unsigned long)(count - 1)];
             }
             if ([string length] > 0) {
+                self.allergiesLabel.text = string;
+            }
+            else {
+                self.allergiesLabel.text = @"None";
+            }
+        }
+        else { self.allergiesLabel.text = @"None"; }
+    }
+     */
+    {
+        NSArray *allergies = [patient.syntheticInfo objectForKey:@"allergies"];
+        NSUInteger count = [allergies count];
+        self.allergiesLabel.textColor = [UIColor blackColor];
+        if (count) {
+            NSMutableString *string = [[allergies objectAtIndex:0] mutableCopy];
+            if (count > 1) {
+                self.allergiesLabel.textColor = [HRConfig redColor];
+                [string appendFormat:@", %lu more", (unsigned long)(count - 1)];
+            }
+            if ([string length] > 0) {
+                self.allergiesLabel.textColor = [HRConfig redColor];
                 self.allergiesLabel.text = string;
             }
             else {
