@@ -5,10 +5,14 @@
     "org.mitre.hreader.encounters",
     "org.mitre.hreader.medications",
     "org.mitre.hreader.immunizations",
-              "org.mitre.hreader.placeholder.fitbit",
-              "org.mitre.hreader.placeholder.nikeplus",
-              "org.mitre.hreader.placeholder.withings",
+    "org.mitre.hreader.placeholder.fitbit",
+    "org.mitre.hreader.placeholder.nikeplus",
+    "org.mitre.hreader.placeholder.withings",
   ],
+    
+    "allergies": [
+        "Peanuts",
+    ],
     "immunizations": true,
     "chronic_conditions": [
       "Asthma"
