@@ -8,7 +8,7 @@
   ],
     "immunizations": true,
     "chronic_conditions": [
-      "asthma"
+      "Asthma"
     ],
     "conditions": [
       {
