@@ -1,6 +1,7 @@
 # 2012-4-13
 
 - Added new applets provided by Dave
+- Added allergies to synthetic data
 
 # 2012-4-12
 
